# contree.ai

./: .gitignore  README.md  coinche_model.pth  generate_large_datasets.sh  inspect_dataset_validity.py  inspect_parquet.py  install.sh  nx.json  package-lock.json  package.json  paper.md  readme.md  specification.md  start.sh  verify_hands.py
apps/: benchmark_solver.py  debug_metrics.py
apps/coinche-cpp/: CMakeLists.txt  benchmark_cpp_solver.py  bindings.cpp  build.sh  test_batch.py  test_solve_all.py
apps/coinche-cpp/core/: cards.hpp
apps/coinche-cpp/search/: minimax.cpp  minimax.hpp
apps/coinche-cpp/tests/: test_solver.cpp
apps/coinche-engine/: Cargo.toml  README.md  benchmark_rust_solver.py  generate_datasets.py  project.json  pyproject.toml  verify_data_gen.py
apps/coinche-engine/src/: game.rs  lib.rs  solver.rs
apps/coinche-engine/src/data_gen/: bidding.rs  bidding_test_append.rs  common.rs  gameplay.rs  mod.rs
apps/coinche-engine/src/gameplay/: bidding.rs  manager.rs  mod.rs  playing.rs
apps/coinche-ml/: pyproject.toml
apps/coinche-ml/runs/bidding/PIMC_20_HT_bidding_model_300K_20e/: events.out.tfevents.1767284462.demanghon-20QD003MMZ.625746.0  events.out.tfevents.1767285705.demanghon-20QD003MMZ.632368.0
apps/coinche-ml/runs/bidding/PIMC_20_HT_bidding_model_300K_20e/Loss_Train/: events.out.tfevents.1767284613.demanghon-20QD003MMZ.625746.1  events.out.tfevents.1767285852.demanghon-20QD003MMZ.632368.1
apps/coinche-ml/runs/bidding/PIMC_20_HT_bidding_model_300K_20e/Loss_Validation/: events.out.tfevents.1767284613.demanghon-20QD003MMZ.625746.2  events.out.tfevents.1767285852.demanghon-20QD003MMZ.632368.2
apps/coinche-ml/runs/bidding/simple_bidding_model_300K_20e_mlp/: events.out.tfevents.1767212729.demanghon-20QD003MMZ.521225.0  events.out.tfevents.1767266480.demanghon-20QD003MMZ.572839.0  events.out.tfevents.1767266663.demanghon-20QD003MMZ.573252.0
apps/coinche-ml/runs/bidding/simple_bidding_model_300K_20e_mlp/Loss_Train/: events.out.tfevents.1767212908.demanghon-20QD003MMZ.521225.1
apps/coinche-ml/runs/bidding/simple_bidding_model_300K_20e_mlp/Loss_Validation/: events.out.tfevents.1767212908.demanghon-20QD003MMZ.521225.2
apps/coinche-ml/runs/playing/PIMC_20_HT_playing_data_1M_e50_resnet_dropout0.2_blocks4/: events.out.tfevents.1767295037.demanghon-20QD003MMZ.657657.0
apps/coinche-ml/runs/playing/simple_playing_data_1M_20e_mlp/: events.out.tfevents.1767196432.demanghon-20QD003MMZ.424878.0
apps/coinche-ml/runs/playing/simple_playing_model_1M_20e_resnet_dropout0.1_blocks4/: events.out.tfevents.1767212539.demanghon-20QD003MMZ.519607.0  events.out.tfevents.1767266133.demanghon-20QD003MMZ.572515.0
apps/coinche-ml/runs/playing/simple_playing_model_1M_50e_resnet_dropout0.2/: events.out.tfevents.1767267020.demanghon-20QD003MMZ.574059.0
apps/coinche-ml/runs/playing/simple_playing_model_1M_50e_resnet_dropout0.2_blocks6/: events.out.tfevents.1767277245.demanghon-20QD003MMZ.602240.0
apps/coinche-ml/src/: bidding_dataset.py  bidding_model.py  dataset.py  gameplay_dataset.py  gameplay_model.py  model.py  train.py  train_bidding.py  train_playing.py  trainer.py
apps/coinche-model-comparator/: pyproject.toml
apps/coinche-model-comparator/runs/tournament/Heuristic_A_vs_Heuristic_B_1767275286/: events.out.tfevents.1767275286.demanghon-20QD003MMZ.598363.0
apps/coinche-model-comparator/runs/tournament/Heuristic_A_vs_Heuristic_B_1767275311/: events.out.tfevents.1767275311.demanghon-20QD003MMZ.598488.0
apps/coinche-model-comparator/runs/tournament/Heuristic_A_vs_Heuristic_B_1767275339/: events.out.tfevents.1767275339.demanghon-20QD003MMZ.598629.0
apps/coinche-model-comparator/runs/tournament/Simple_vs_PIMC_1767340648/: events.out.tfevents.1767340648.demanghon-20QD003MMZ.713115.0
apps/coinche-model-comparator/runs/tournament/Simple_vs_PIMC_1767344349/: events.out.tfevents.1767344349.demanghon-20QD003MMZ.715969.0
apps/coinche-model-comparator/runs/tournament/Team_A_Baseline_vs_Team_B_Challenger_1767274970/: events.out.tfevents.1767274970.demanghon-20QD003MMZ.597293.0
apps/coinche-model-comparator/runs/tournament/Team_A_Baseline_vs_Team_B_Challenger_1767275001/: events.out.tfevents.1767275001.demanghon-20QD003MMZ.597526.0
apps/coinche-model-comparator/src/: agent.py  compare_models.py  tournament.py
apps/coinche-runner/: project.json  pyproject.toml  tree.dot
apps/coinche-runner/src/: main.py
backend/: project.json
(+75 files in other folders)
