[tool.poetry]
name = "coinche-runner"
version = "0.1.0"
description = "Demo runner for Coinche AI"
authors = ["Jérôme Demanghon <demanghonj@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
coinche-solver = { path = "../coinche-solver", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
